--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js localhost:5000",
+    "dev": "nodemon ./index.js localhost:5000",
+    "start": "node ./index.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
